# second-brain

./: README.md  pyproject.toml
docs/: architecture.md  configuration.md
examples/: telegram_brain_bot.py  telegram_pull.py
second_brain/: __init__.py  __main__.py  ask.py  brain_api.py  config.py  daily_note.py  duplicates.py  graph.py  janitor.py  librarian.py  plugin_base.py  plugin_manager.py  plugins.py  prompts.py  setup.py  tags.py  tui.py  wallpaper.py
telegram_inbox/: __init__.py  app.py  bot.py  config.py  storage.py
tests/: conftest.py  test_ask.py  test_config.py  test_daily_note.py  test_duplicates.py  test_graph.py  test_janitor.py  test_janitor_multilingual.py  test_librarian.py  test_plugins.py  test_tags.py  test_wallpaper.py
