[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain"
version = "0.1.0"
description = "AI-driven markdown knowledge base with graph visualization"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "groq>=0.4.0",
    "pillow>=10.0.0",
]

[project.scripts]
second-brain = "second_brain.__main__:main"

[tool.setuptools.packages.find]
include = ["second_brain*"]
